--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,11 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "Change"}
+  - {file: "index.html", title: "Home"}
   - {file: "README.md", title: "About Me"}
+  - {file: "activites.md, title: "Recent Activities"}
+  - {file: "publications.md, title: "Publications"}
+  - {file: "hobbies.md", title: "Hobbies"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:irathbun@umd.edu"}
