--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "Home"}
+  #- {file: "index.html", title: "Home"}
+  - {file: "bio.md", title: "Home"}
   - {file: "README.md", title: "About Me"}
   - {file: "activites.md", title: "Recent Activities"}
   - {file: "publications.md", title: "Publications"}
