--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   #- {file: "index.html", title: "Home"}
   - {file: "bio.md", title: "Home"}
   - {file: "README.md", title: "About Me"}
-  - {file: "activites.md", title: "Recent Activities"}
+  #- {file: "activites.md", title: "Recent Activities"}
+  - {file: "shennanigans.md", title: "Shennanigans"}
   - {file: "publications.md", title: "Publications"}
   - {file: "hobbies.md", title: "Hobbies"}
 
