--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Isabelle Rathbun"
 author: "Isabelle Rathbun"
 description: "University of Maryland, College Park"
-permalink: /:title/
+#permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
 date_format: "%B %d, %Y"
