--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Isabelle Rathbun"
 author: "Isabelle Rathbun"
 description: "University of Maryland, College Park"
-#permalink: /:title/
+permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
 date_format: "%B %d, %Y"
@@ -33,5 +33,11 @@ comments:
 #  disqus_shortname: ""    # see https://disqus.com/
 #  isso_domain: ""         # see https://posativ.org/isso/
 
+titles_from_headings:
+  enabled:     true
+  strip_title: true
+  collections: true 
+
 plugins:
  - jekyll-feed
+ - jekyll-titles-from-headings
