--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   #- {file: "index.html", title: "Home"}
-  - {file: "bio.md", title: "Home"}
-  - {file: "README.md", title: "About Me"}
+  - {file: "index.md", title: "Home"}
+  #- {file: "README.md", title: "About Me"}
   #- {file: "activites.md", title: "Recent Activities"}
   - {file: "shennanigans.md", title: "Shennanigans"}
   - {file: "publications.md", title: "Publications"}
